# hackathon-2-TODO_APP

./: .env.example  .gitignore  CLAUDE.md  FIXES_SUMMARY.md  README.md  TEST_PLAN.md  pyproject.toml  test_chatbot.py  test_fixes.py
.claude/agents/: ai-integration-architect.md  backend-architect.md  devops-architect.md  event-architect.md  frontend-architect.md  project-architect.md
.claude/skills/: api-documentation-auto-generation.skill.md  cloud-native-blueprint-generation.skill.md  database-migration-management.skill.md  mcp-tool-auto-generation.skill.md  speckit-workflow-enforcement.skill.md  test-suite-auto-generation.skill.md
.github/workflows/: deploy.yml
.specify/memory/: constitution-phase2.md  constitution-phase4.md  constitution.md  constitution_session_management.md  phase-2-full-stack-app-constitution.md
phase-1/src/: colors.py  main.py  models.py  storage.py  todo_manager.py  ui.py
phase-1/tests/: test_main.py  test_models.py  test_todo_manager.py
phase-2/: README.md  TROUBLESHOOTING.md
phase-2-3/: RUN_CHATBOT.bat  START_FRONTEND.bat
phase-2-3/backend/: README.md  requirements.txt  reset_database.py  test_chat_temp.py  test_chatbot.py  test_chatbot_final.py  test_functionality.py
phase-2-3/frontend/: package.json  tailwind.config.ts
phase-2/backend/: .env.example  CHATBOT_STATUS.md  Dockerfile  asgi.py  requirements.txt  system_verification.py  test_basic.py  test_chatbot_functionality.py
phase-2/frontend/: middleware.ts  package-lock.json  package.json  types.ts
phase-5/: README.md
phase-5/dapr-components/: kubernetes-secrets.yaml  (+1 more)
(+158 files in other folders)
