[project]
name = "todo-console-app"
version = "0.1.0"
description = "A simple command-line todo list application"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0",
    
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
